--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13"
   }
 }
